--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(NESEmulator LANGUAGES CXX)
+project(NES-emulator LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
 
-add_executable(NESEmulator
+add_executable(NES-emulator
     main.cpp
     bus.cpp
     rom.cpp
@@ -17,11 +17,6 @@ add_executable(NESEmulator
     CPU/cpu_red.cpp
     CPU/cpu_blue.cpp
     CPU/cpu_gray.cpp
+    PPU/ppu.cpp
 )
 
-#cpu.cpp
-#cpu_addressing_modes.cpp
-#cpu_green.cpp
-#cpu_red.cpp
-#cpu_blue.cpp
-#cpu_gray.cpp
